# shopifyrs

./: .gitignore  Cargo.toml  LICENSE-MIT  readme.md  shopifyrs.sublime-project
docs/: readme.md
src/: utils.rs
tests/api/: utils_tests.rs
